<resources>
    <string name="app_name">Whatsapp</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call_fragment">Call fragment</string>
    <string name="verify_your_number">Verify your Number</string>
    <string name="we_will_send_otp_on_your_phone_number_to_verify">We will send otp on your phone number to verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="image_view">Image view</string>
    <string name="phoneNumberSuggestion">+92 304 xxxxxxx</string>
    <string name="button">Button</string>
    <string name="Continue" >CONTINUE</string>
    <string name="verify_otp" >Verify OTP</string>
    <string name="otp_warning" >Enter Six digit OTP to verify your number</string>
</resources>