<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    style="@style/Theme.Whatsappclone.noActionBar"
    tools:context=".activity.NumberActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:paddingTop="70dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="30dp"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/ic_undraw_mobile_login_re_9ntv"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="12dp"
        android:paddingTop="40dp"
        android:text="@string/verify_your_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center_horizontal"
        android:text="@string/we_will_send_otp_on_your_phone_number_to_verify"
        android:textColor="#A1887F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:layout_editor_absoluteX="12dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:autofillHints="Enter your number"
        android:gravity="center_horizontal"
        android:hint="@string/phoneNumberSuggestion"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:layout_editor_absoluteX="12dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/button"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber"
        tools:layout_editor_absoluteX="12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>